[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hts"
version = "0.1.0"
description = "Python library to handle timeseries and channel signals"
authors = [
  { name = "Giuseppe Piccininni", email = "" }
]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]